--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.2"
+    "graphql-tools": "^7.0.2",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
